examples from lectures

--- a/lectures/14/descendant-selector-before.html
+++ b/lectures/14/descendant-selector-before.html
@@ -6,8 +6,12 @@
 <style>
 
 /* all li elements that are inside a section element. */
-xxx {
-  color: green;
+section li {    /* descendent selector */
+  color: pink;  
+}
+
+p{
+  color:blue;
 }
 
 </style>
@@ -29,6 +33,15 @@ xxx {
     <li>Cake</li>
     <li>Pie</li>
   </ul>
+
+
+  <div>
+    <p>I am feeling blue</p>
+  </div>
+  <section>
+    <p>I just want to be left alone!</p>
+  </section>
+
 </article>
 </body>
 </html>
