--- a/module2-solution/solution.html
+++ b/module2-solution/solution.html
@@ -4,252 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Our Menu</title>
-<style>
-
-/********** Base styles **********/
-* {
-  box-sizing: border-box;
-}
-h1 {
-  margin-top: 50px;
-  margin-bottom: 30px;
-  text-align: center;
-}
-/*
-div{
-  position: relative;
-}*/
-
-
-p {
-  margin-top: 40px;
-  background-color: gray;
-  width: 100%;
-  height: 150px;
-  font-family: Helvetica;
-  color: black;
-  margin-left: 10px;
-  margin-right: 10px;
-  border: 1px solid black;
-  padding-left: 10px;
-  padding-right: 10px;  
-  padding-top: 30px;
-}
-
-#p1{
-    width: auto;
-    text-align:left;
-}
-
-#p2{
-    width: auto;
-}
-
-#p3{
-    width: auto;
-}
-
-#p4{
-  background-color: pink;
-  top: 0;
-  right: 0;
-  width: 90px;
-  height: 30px;
-  position: absolute;
-  text-align: center;
-  padding-top: 2px; 
-  font-weight: bold; 
-  color: black;
-}
-
-#p5{
-  background-color: red;
-  top: 0;
-  right: 0;
-  width: 90px;
-  height: 30px;
-  position: absolute;
-  padding-top: 2px;  
-  text-align: center;
-  font-weight: bold;
-  color: white;
-}
-
-#p6{
-  background-color: orange;
-  /*top: 0;
-  right: 0;*/
-  width: 90px;
-  height: 30px;
-  position: absolute;
-  padding-top: 2px;  
-  text-align: center;
-  font-weight: bold;
-  color: black;
-}
-
-/* Simple Responsive Framework. */
-.row {
-  width: 100%;
-}
-
-/*Desktop*/
-@media (min-width: 992px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-    float: left;
-   
-  }
-  #p6{
-    top : 0;
-    right: 0;
-  }
-
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
-  }
-  .col-lg-4 {
-    position: relative;
-    width: 33.33%;
-  }
-  .col-lg-5 {
-    width: 41.66%;
-  }
-  .col-lg-6 {
-    width: 50%;
-  }
-  .col-lg-7 {
-    width: 58.33%;
-  }
-  .col-lg-8 {
-    width: 66.66%;
-  }
-  .col-lg-9 {
-    width: 74.99%;
-  }
-  .col-lg-10 {
-    width: 83.33%;
-  }
-  .col-lg-11 {
-    width: 91.66%;
-  }
-  .col-lg-12 {
-    width: 100%;
-  }
-}
-
-/*Tablet*/
-@media (min-width: 768px) and (max-width: 991px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-    float: left;
-    position: relative;
-  }
-  #p3{
-    width: 195%;
-    padding-top: 60px;
-    margin-top: 10px;
-  }
-
-  #p6{
-    top : 0;
-    left: 0;
-  }
-  .col-md-1 {
-    position: relative;
-    width: 8.33%;
-  }
-  .col-md-2 {
-    width: 16.66%;
-  }
-  .col-md-3 {
-    width: 25%;
-  }
-  .col-md-4 {
-    
-    width: 33.33%;
-  }
-  .col-md-5 {
-    width: 41.66%;
-  }
-  .col-md-6 {
-    width: 50%;
-  }
-  .col-md-7 {
-    width: 58.33%;
-  }
-  .col-md-8 {
-    width: 66.66%;
-  }
-  .col-md-9 {
-    width: 74.99%;
-  }
-  .col-md-10 {
-    width: 83.33%;
-  }
-  .col-md-11 {
-    width: 91.66%;
-  }
-  .col-md-12 {
-    width: 100%;
-  }
-}
-
-
-/*Mobile*/
-@media (max-width: 767px) {
-  .col-sd-1, .col-sd-2, .col-sd-3, .col-sd-4, .col-sd-5, .col-sd-6, .col-sd-7, .col-sd-8, .col-sd-9, .col-sd-10, .col-sd-11, .col-sd-12 {
-    float: left;
-    position: relative;
-  }
-  #p6{
-    top : 0;
-    right: 0;
-  }
-
-  .col-sd-1 {
-    width: 8.33%;
-  }
-  .col-sd-2 {
-    width: 16.66%;
-  }
-  .col-sd-3 {
-    width: 25%;
-  }
-  .col-sd-4 {
-    width: 33.33%;
-  }
-  .col-sd-5 {
-    width: 41.66%;
-  }
-  .col-sd-6 {
-    width: 50%;
-  }
-  .col-sd-7 {
-    width: 58.33%;
-  }
-  .col-sd-8 {
-    width: 66.66%;
-  }
-  .col-sd-9 {
-    width: 74.99%;
-  }
-  .col-sd-10 {
-    width: 83.33%;
-  }
-  .col-sd-11 {
-    width: 91.66%;
-  }
-  .col-sd-12 {
-    width: 100%;
-  }
-}
-
-</style>
+<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <h1>Our Menu</h1>
@@ -257,7 +12,7 @@ p {
 <div class="row">
   <div class="col-lg-4 col-md-6 col-sd-12"><p id="p4"> Chicken </p><p id = "p1"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. </p></div>
   <div class="col-lg-4 col-md-6 col-sd-12"><p id="p5"> Beef </p><p id = "p2">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p></div>
-  <div class="col-lg-4 col-md-6 col-sd-12"><p id="p6"> Sushi </p><p id = "p3">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. </p></div>
+  <div id ="div1" class="col-lg-4 col-md-6 col-sd-12"><p id="p6"> Sushi </p><p id = "p3">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. </p></div>
 </div>
 
 </body>
